--- a/src/content-safety-evaluations-adversarial-data.ipynb
+++ b/src/content-safety-evaluations-adversarial-data.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,22 @@
     "    for item in output_dict:\n",
     "        fp.write(json.dumps(item) + '\\n')\n",
     "    print(\"Written all results to file\")\n",
-    "    fp.close()"
+    "    fp.close()\n",
+    "\n",
+    "\n",
+    "with open('content_safety_adversarial_input_evaluation_results.md', 'w') as md_file:\n",
+    "    # Extract headers from the first dictionary\n",
+    "    headers = output_dict[0].keys()\n",
+    "    # Write headers\n",
+    "    md_file.write('| ' + ' | '.join(headers) + ' |\\n')\n",
+    "    md_file.write('| ' + ' | '.join(['---'] * len(headers)) + ' |\\n')\n",
+    "        \n",
+    "    # Write rows\n",
+    "    for item in output_dict:\n",
+    "        row = [str(item[key]) for key in headers]\n",
+    "        md_file.write('| ' + ' | '.join(row) + ' |\\n')\n",
+    "        \n",
+    "    print(\"Written all results to Markdown file\")"
    ]
   },
   {
@@ -289,7 +304,22 @@
     "    for item in output_dict:\n",
     "        fp.write(json.dumps(item) + '\\n')\n",
     "    print(\"Written all results to file\")\n",
-    "    fp.close()"
+    "    fp.close()\n",
+    "\n",
+    "\n",
+    "with open('content_safety_adversarial_output_evaluation_results.md', 'w') as md_file:\n",
+    "    # Extract headers from the first dictionary\n",
+    "    headers = output_dict[0].keys()\n",
+    "    # Write headers\n",
+    "    md_file.write('| ' + ' | '.join(headers) + ' |\\n')\n",
+    "    md_file.write('| ' + ' | '.join(['---'] * len(headers)) + ' |\\n')\n",
+    "        \n",
+    "    # Write rows\n",
+    "    for item in output_dict:\n",
+    "        row = [str(item[key]) for key in headers]\n",
+    "        md_file.write('| ' + ' | '.join(row) + ' |\\n')\n",
+    "        \n",
+    "    print(\"Written all results to Markdown file\")"
    ]
   }
  ],
